Refactor collectors and controllers for improved readability and consistency